update instructions on job import

--- a/pages/data-processing-unit/index.html
+++ b/pages/data-processing-unit/index.html
@@ -111,7 +111,7 @@ in json/sample-instrument-definition.json and
 json/sample-filetype-definition.json are imported into the PiLR
 system. This may require an administrator.</p>
 </li>
-<li><p>Import the sample-dpu-definition.json file into PiLR through the
+<li><p>Update the sample-dpu-definition.json job file. You only will need to modify one line. Put the name of your Github account in the package_url property, where it shows "YourGithubAccount". Save the file, and import the sample-dpu-definition.json file into PiLR through the
 configuration page.</p>
 </li>
 <li><p>Run the job from the Processing in R tool. A dataset with 10
